# EMCal_exercise

./: .gitignore
Exercise03/: Exercise03.ipynb  Exercise03.tex  Exercise03_Solutions.ipynb  dielectron.root
Exercise03/.ipynb_checkpoints/: exercise3_utils-checkpoint.py
Exercise03/energy_resolution/: test.ipynb
Exercise03/unit_test/: KMeans_clean.ipynb
Exercise03/unit_test/ref/: kmeans_unified_test.py
Exercise03/vis/: Aprime_dielectron.root  electron.root
ExerciseGeant4/: Geant4_Part1.ipynb  Geant4_Part2.ipynb
ExerciseGeant4/geant4_simulation/: __init__.py  materials.py
ExerciseGeant4/geant4_simulation/geometry/: __init__.py  compcalor.py  febox_with_tailcatch.py  samplingcalo.py  tumortherapy.py
archive/: Exercise03.ipynb
archive/Exercise03/: Exercise03_Solutions.ipynb
archive/Exercise03/.ipynb_checkpoints/: Exercise03-checkpoint.ipynb
new/Exercise03/: Exercise03.ipynb  Exercise03_Solutions.ipynb  unit_test.py
new/Exercise03/.ipynb_checkpoints/: Exercise03-checkpoint.ipynb
new/ExerciseGeant4/: Geant4.tex  Geant4_Part1_Solutions.ipynb
new/ExerciseGeant4/geant4_simulation/: actions.py  (+2 more)
new/ExerciseGeant4/geant4_simulation/physicsList/: CMakeLists.txt
new/ExerciseGeant4/geant4_simulation/physicsList/src/: MyQGSP_BERT.cc  MyQGSP_BERT.hh
unit_test/: Exercise03_dirty.ipynb  KMeans_Guide.ipynb  KMeans_clean.ipynb  improved_test_untested.py
unit_test/.ipynb_checkpoints/: KMeans_Guide-checkpoint.ipynb  cornell_kmean_test-checkpoint.py  kmeans-checkpoint.py  kmeans_unified_test-checkpoint.py
unit_test/ref/: improved_test_untested.py  kmeans.py
(+11 files in other folders)
